// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FinishDetail render should render with full props 1`] = `
<TouchableHighlight
  onPress={[Function]}
  underlayColor="rgba(0, 0, 0, .1)"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "padding": 8,
        },
        Object {
          "backgroundColor": "#FFFFFF",
          "marginBottom": 8,
        },
        Object {
          "borderColor": "#D45D00",
          "borderWidth": 2,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flexDirection": "column",
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "/image/url",
          }
        }
        style={
          Object {
            "height": 80,
            "marginRight": 8,
            "width": 80,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "height": 16,
              "width": 80,
            },
            Object {
              "backgroundColor": "#654321",
            },
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text
        weight="bold"
      >
        finish
      </Text>
      <Text
        weight="bold"
      >
        $123.45
      </Text>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`FinishDetail render should render with isSelected false, no pricebookCostView, no hex value, and leadTimeInformation 1`] = `
<TouchableHighlight
  onPress={[Function]}
  underlayColor="rgba(0, 0, 0, .1)"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "padding": 8,
        },
        Object {
          "backgroundColor": "#FFFFFF",
          "marginBottom": 8,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flexDirection": "column",
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "/image/url",
          }
        }
        style={
          Object {
            "height": 80,
            "marginRight": 8,
            "width": 80,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "height": 16,
              "width": 80,
            },
            Object {
              "backgroundColor": "#987654",
            },
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text
        weight="bold"
      >
        finish
      </Text>
      <Text
        weight="bold"
      >
        $123.45
      </Text>
      <Text>
        lead time info text
      </Text>
    </View>
  </View>
</TouchableHighlight>
`;
